--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/bc4a62b049.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -59,10 +60,303 @@
                 </button>
             </div>
         </section>
+
         <!-- slide end -->
+
     </header>
 
+    <!-- main section start -->
 
+    <main>
+        <div>
+            <h1 class="text-center">Discover Our Popular Courses</h1>
+            <p class="text-center">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout</p>
+        </div>
+        <div class=".....">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the card
+                            </p>
+                            <h5>Price:20$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Fullstack Web Development</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the card</p>
+                            <h5>Price:20$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Photography Basic Rule</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h5>Price:20$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Javascript Basic to advanced</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h5>Price:20$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Digital Marketing</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h5>Price:20$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Motion Graphics</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h5>Price:20$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <br>
+        <button class="bg-primary text-white mb-3 ">see more course </button>
+        <br>
+        <br>
+
+        <!-- review part start -->
+        <div class="card mb-3" style="width:1200px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img class="img-fluid" src="images/working.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title p-4">Explore The elearning Institute</h4>
+                        <p class="card-text p-4">here are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or
+                            randomised words which don't look even slightly believable. If you are going
+                            to use a passage of Lorem Ipsum, you need to be sure.
+
+
+                            Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                            generators on the Internet tend to repeat predefined.</p>
+                        <div class="d-flex justify-content-evenly">
+                            <div>
+                                <h5>3.2k</h5>
+                                <p>online course</p>
+                            </div>
+                            <div>
+                                <h5>600+</h5>
+                                <p>Expart Trainer</p>
+                            </div>
+                            <div>
+                                <h5>1k+</h5>
+                                <p>Rating & Reviews</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- review part end-->
+
+    </main>
+    <!-- main section end -->
+
+    <!-- bonus part start -->
+    <div class="card">
+
+        <div class="card-body bg-dark text-white d-flex justify-content-evenly">
+            <div>
+                <h5 class="card-title">Ready to join?</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div>
+                <a href="#" class="btn btn-light">Register now</a>
+            </div>
+        </div>
+    </div>
+    <!-- bonus part end -->
+
+    <!-- 
+    question section start
+ -->
+
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Different between CSS and Tailwind ?
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+                    plugin adds the appropriate classes that we use to style each element. These classes control the
+                    overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of
+                    this with custom CSS or overriding our default variables. It's also worth noting that just about any
+                    HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item pt-3 pb-3">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    what is grid ?
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
+                    collapse plugin adds the appropriate classes that we use to style each element. These classes
+                    control the overall appearance, as well as the showing and hiding via CSS transitions. You can
+                    modify any of this with custom CSS or overriding our default variables. It's also worth noting that
+                    just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit
+                    overflow.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    what is flex ?
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                    collapse plugin adds the appropriate classes that we use to style each element. These classes
+                    control the overall appearance, as well as the showing and hiding via CSS transitions. You can
+                    modify any of this with custom CSS or overriding our default variables. It's also worth noting that
+                    just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit
+                    overflow.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    what is vanila CSS ?
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <strong>This is the forth item's accordion body.</strong> It is hidden by default, until the
+                    collapse plugin adds the appropriate classes that we use to style each element. These classes
+                    control the overall appearance, as well as the showing and hiding via CSS transitions. You can
+                    modify any of this with custom CSS or overriding our default variables. It's also worth noting that
+                    just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit
+                    overflow.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 
+    question section end 
+ -->
+    <section>
+
+        <h1 class="text-center pb-3 pt-3">Trusted by over 800+ companies</h1>
+
+        <div>
+            <ul class="d-flex justify-content-evenly">
+                <div class="li"><img src="images/company/company-1.png" alt=""></div>
+                <div class="li"><img src="images/company/company-2.png" alt=""></div>
+                <div class="li"><img src="images/company/company-3.png" alt=""></div>
+                <div class="li"><img src="images/company/company-4.png" alt=""></div>
+                <div class="li"><img src="images/company/company-5.png" alt=""></div>
+                <div class="li"><img src="images/company/company-6.png" alt=""></div>
+            </ul>
+        </div>
+    </section>
+
+
+    <!-- footer start -->
+
+    <footer class="bg-dark text-white">
+        <div class="up-part text-center">
+            <h1>learn</h1>
+
+        </div>
+        <div class="footer-menu">
+            <div class="text-white d-flex justify-content-evenly">
+                <a href=""> Contact Us</a>
+                <a href="">Termes of service</a>
+                <a href=""> Privacy and policy</a>
+                <a href=""> Privacy Settings</a>
+            </div>
+            <div class="media-link d-flex justify-content-evenly">
+                <a href="https://www.facebook.com/Mehedii09"><i class="fa-brands fa-facebook"></i></a>
+                <a href=""> <i class="fa-brands fa-instagram-square"></i></a>
+                <a href=""><i class="fa-brands fa-google-plus-square"></i></a>
+                <a href=""> <i class="fa-brands fa-youtube"></i></a>
+                <a href=""> <i class="fa-brands fa-google"></i></a>
+            </div>
+            <p class="text-center">
+                copy right @2022 developed by Mehedi Hasan
+            </p>
+
+        </div>
+    </footer>
+    <!-- footer end-->
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
