--- a/index.html
+++ b/index.html
@@ -36,24 +36,48 @@
         <br>
         <!-- slide start -->
         <section>
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <img class="img-fluid" src="images/cover/cover-1.png" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="fw-bold fs-1 align-top">greetings! </h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                            <button class="bg-primary text-white">click me </button>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <img class="img-fluid" src="images/cover/cover-2.jpg" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5> choose your course</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                            <button class="bg-primary text-white">click me </button>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <img class="img-fluid" src="images/cover/cover-3.jpg" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>welcome our site </h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                            <button class="bg-primary text-white">click me </button>
+                        </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
@@ -73,115 +97,139 @@
             <p class="text-center">It is a long established fact that a reader will be distracted by the readable
                 content of a page when looking at its layout</p>
         </div>
-        <div class=".....">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the card
-                            </p>
-                            <h5>Price:20$</h5>
+        <div class="row p-4">
+            <div class="col-lg-6 col-md-4 col-12">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    card
+                                </p>
+                                <h5>Price:20$</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Fullstack Web Development</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card</p>
-                            <h5>Price:20$</h5>
+            <div class="col-lg-6 col-md-4 col-12">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Fullstack Web Development</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card</p>
+                                <h5>Price:20$</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Photography Basic Rule</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <h5>Price:20$</h5>
+            <div class="col-lg-6 col-md-4 col-12">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Photography Basic Rule</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <h5>Price:20$</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Javascript Basic to advanced</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <h5>Price:20$</h5>
+            <div class="col-lg-6 col-md-4 col-12">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Digital Marketing</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <h5>Price:20$</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Motion Graphics</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <h5>Price:20$</h5>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Javascript Basic to advanced</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <h5>Price:20$</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <div class="col-lg-6 col-md-4 col-12">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Digital Marketing</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <h5>Price:20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-4 col-12">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Motion Graphics</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a
+                                    natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <h5>Price:20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <br>
-        <button class="bg-primary text-white mb-3 ">see more course </button>
+        <div class="d-flex justify-content-evenly">
+            <button class="bg-primary text-white mb-3 ms-3">see more course </button>
+        </div>
         <br>
         <br>
 
         <!-- review part start -->
-        <div class="card mb-3" style="width:1200px;">
+        <div class="card mb-3 ms-3" style="width:1200px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img class="img-fluid" src="images/working.png" class="img-fluid rounded-start" alt="...">
                 </div>
+
                 <div class="col-md-8">
                     <div class="card-body">
                         <h4 class="card-title p-4">Explore The elearning Institute</h4>
-                        <p class="card-text p-4">here are many variations of passages of Lorem Ipsum available, but the
+                        <p class="card-text p-4">here are many variations of passages of Lorem Ipsum available,
+                            but the
                             majority have suffered alteration in some form, by injected humour, or
                             randomised words which don't look even slightly believable. If you are going
                             to use a passage of Lorem Ipsum, you need to be sure.
@@ -189,7 +237,7 @@
 
                             Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
                             generators on the Internet tend to repeat predefined.</p>
-                        <div class="d-flex justify-content-evenly">
+                        <div class="col-lg-6 col-md-4 col-12 d-flex justify-content-evenly">
                             <div>
                                 <h5>3.2k</h5>
                                 <p>online course</p>
@@ -206,6 +254,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <!-- review part end-->
@@ -214,7 +263,7 @@
     <!-- main section end -->
 
     <!-- bonus part start -->
-    <div class="card">
+    <div class="card p-4 bg-dark">
 
         <div class="card-body bg-dark text-white d-flex justify-content-evenly">
             <div>
@@ -227,6 +276,52 @@
         </div>
     </div>
     <!-- bonus part end -->
+
+    <!-- review section start  -->
+
+    <section class="mx-3 my-5">
+
+        <h1 class="text-center"> Meet Our Succesful Student</h1>
+
+        <div class="row">
+            <div class="card-group">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Imran hossain.</h5>
+                            <p class="card-text"> Graphics Design</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">nishita ali</h5>
+                            <p class="card-text"> Motion Design
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"> awlad hosen </h5>
+                            <p class="card-text">ux/ui Design</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- review section  end -->
 
     <!-- 
     question section start
@@ -331,13 +426,13 @@
 
     <!-- footer start -->
 
-    <footer class="bg-dark text-white">
+    <footer class="py-5 bg-dark text-white">
         <div class="up-part text-center">
             <h1>learn</h1>
 
         </div>
-        <div class="footer-menu">
-            <div class="text-white d-flex justify-content-evenly">
+        <div class="footer-menu text-white">
+            <div class=" d-flex justify-content-evenly">
                 <a href=""> Contact Us</a>
                 <a href="">Termes of service</a>
                 <a href=""> Privacy and policy</a>
@@ -351,7 +446,7 @@
                 <a href=""> <i class="fa-brands fa-google"></i></a>
             </div>
             <p class="text-center">
-                copy right @2022 developed by Mehedi Hasan
+                Copy Right @2022 Developed by Mehedi Hasan
             </p>
 
         </div>
