--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </div>
         </nav>
         <br>
+
         <!-- slide start -->
+
         <section>
 
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -237,7 +239,7 @@
 
                             Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
                             generators on the Internet tend to repeat predefined.</p>
-                        <div class="col-lg-6 col-md-4 col-12 d-flex justify-content-evenly">
+                        <div class="col-lg- col-md-6 col-12 d-flex justify-content-evenly">
                             <div>
                                 <h5>3.2k</h5>
                                 <p>online course</p>
@@ -263,7 +265,7 @@
     <!-- main section end -->
 
     <!-- bonus part start -->
-    <div class="card p-4 bg-dark">
+    <div class="card py-5 bg-dark">
 
         <div class="card-body bg-dark text-white d-flex justify-content-evenly">
             <div>
